# flask-quick-sql

./: LICENSE  README.md  flask_quick_sql.py  pyproject.toml
.github/workflows/: pypi-release.yml
